update fiche request array

--- a/gsb-frais/config/routes.yaml
+++ b/gsb-frais/config/routes.yaml
@@ -14,3 +14,8 @@ visiteur_frais:
 visiteur_login:
     path: /visiteur/login
     controller: App\Controller\VisiteurController::login
+
+
+visiteur_reception_fiche:
+    path: /visiteur/fiche/envoyer
+    controller: App\Controller\VisiteurController::reception_fiche
