fix loutout route | front fiche frais forfait qnt

--- a/gsb-frais/config/routes.yaml
+++ b/gsb-frais/config/routes.yaml
@@ -3,7 +3,7 @@ accueil:
     controller: App\Controller\AcceuilController::accueil
 
 deconnexion:
-    path: /logout
+    path: /deconnexion
     controller: App\Controller\AcceuilController::deconnexion
 
 visiteur_historique:
