Auto stash before merge of "master" and "origin/master"

--- a/gsb-frais/config/routes.yaml
+++ b/gsb-frais/config/routes.yaml
@@ -31,3 +31,4 @@ comptable_login:
 comptable_frais:
     path: /comptable/fiches
     controller: App\Controller\ComptableController::fiches
+    methods: [GET,POST]
